# kiwi

./: .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  build.zig  deps.lock.toml
bridge/include/: kiwi_bridge.h  module.modulemap
csrc/: host_blas.c  host_blas.h  host_compare.c  host_compare.h  host_compare_avx2.c  host_compare_avx512.c  host_compare_neon.c  host_compare_sse2.c  host_compare_sse41.c  host_cpu.c  host_cpu.h  host_dyad.c  host_dyad.h  host_dyad_neon.c  host_find.c  host_find.h  host_find_avx2.c  host_find_avx512.c  host_find_neon.c  host_find_sse2.c  host_mask_neon.c  host_sum.c  host_sum.h  host_sum_avx2.c  host_sum_avx512.c  host_sum_neon.c  host_sum_sse2.c  mlxc_mini.cpp  string_mask_neon.c
extensions/: README.md
extensions/jupyter-kiwi/: README.md  build.zig  pyproject.toml
extensions/jupyter-kiwi/src/kiwi_array_jupyter_kernel/: __init__.py  __main__.py  binding.py  execution.py  install.py  kernel.py
extensions/jupyter-kiwi/tests/: test_kiwi_jupyter_kernel.py
extensions/jupyter-kiwi/zig-src/: tests.zig
extensions/vscode-kiwi/: .vscodeignore  README.md  language-configuration.json  package.json
extensions/vscode-kiwi/src/: extension.js
extensions/vscode-kiwi/syntaxes/: kiwi.tmLanguage.json
extensions/vscode-kiwi/test/: extension.test.js
packaging/wheels/: README.md  build_colab_cuda_wheel.sh  build_wheels.sh  names.env  stage_runtime_payload.py  test_wheel_install.py
python/cpu/: README.md  pyproject.toml
python/cpu/src/kiwi_array_cpu/: __init__.py
python/cuda12/: README.md  pyproject.toml
python/cuda12/src/kiwi_array_cuda12/: __init__.py
python/host/: README.md  pyproject.toml  setup.py
python/host/src/kiwi_array_host/: __init__.py
python/jupyter/: .gitignore  README.md  build.zig  pyproject.toml
python/jupyter/src/kiwi_jupyter_kernel/: __init__.py  binding.py  execution.py  install.py  kernel.py
python/jupyter/tests/: test_kiwi_jupyter_kernel.py
python/jupyter/zig-src/: tests.zig
python/metal/: README.md  pyproject.toml
python/metal/src/kiwi_array_metal/: __init__.py
python/runtime/: README.md  pyproject.toml
python/runtime/src/kiwi_array/: __init__.py  bridge.py  cli.py  notebook.py
python/runtime/src/kiwi_bridge/: __init__.py
python/runtime/src/kiwilang/: __init__.py  notebook.py
python/runtime/tests/: test_bridge_paths.py  test_notebook.py
scripts/: bootstrap_deps.sh  bootstrap_duckdb.sh  build_kiwi_wasm_module.sh  build_linux_mlx.sh  build_linux_mlxc_mini_bridge.sh  build_public_cli.sh  build_wasm.sh  kiwi-zig-linux-builder.Dockerfile  kiwi_cuda_defaults.sh  mlx_runtime_surface.py
src/: bench_internal.zig  device.zig  duckdb_runtime.zig  kiwi_bridge.zig  main.zig  mlx.zig  probe.zig  profile.zig  repl_input.zig  repl_meta.zig  runtime.zig  runtime_backend_autodiff.zig  runtime_backend_exec.zig  runtime_backend_materialize.zig  runtime_backend_render.zig  runtime_backend_wasm.zig  safetensors.zig  syntax_tokens.zig  version.zig  wasm_api.zig
src/native/: c.zig  mlx.zig
src/wasm/: c.zig  mlx.zig
