[build-system]
requires = ["setuptools>=82", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kiwilang-jupyter-kernel"
version = "0.2.33"
description = "Jupyter kernel for Kiwi."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "kiwilang==0.2.33",
  "ipykernel>=6.29",
  "jupyter_client>=8.6",
  "jupyter_core>=5.7",
]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "jupyter_kernel_test>=0.7",
]

[project.scripts]
kiwilang-jupyter-kernel-install = "kiwi_jupyter_kernel.install:main"
kiwi-jupyter-kernel-install = "kiwi_jupyter_kernel.install:main"

[tool.uv.sources]
kiwilang = { path = "../runtime", editable = true }

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
kiwi_jupyter_kernel = ["assets/*.png"]
