[build-system]
requires = ["setuptools>=82", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kiwilang"
version = "0.2.32"
description = "Python bridge and native runtime payload for Kiwi."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
notebook = ["ipython>=8"]
jupyter = ["kiwilang-jupyter-kernel==0.2.32"]

[dependency-groups]
dev = [
  "build>=1.2",
  "pytest>=8.3",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
kiwilang = ["native/*", "lib/*", "licenses/*"]
